Closed Bug 19358 Opened 26 years ago Closed 26 years ago

[dogfood][IME]IME does not force commit on mac

Categories

(Core :: Internationalization, defect, P3)

PowerPC
Mac System 8.6
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: ftang, Assigned: ftang)

Details

(Keywords: inputmethod, Whiteboard: [PDT-]done- have code in my tree. reviewed by erik and pinkerton)

this bug is split from 12090 for Mac only Way to reproduce- 1. Turn on input method 2. Type some japanese ( or Chinese or Korean) 3. click mouse on some other places before we commit the IME to move cursor expect result- commit IME in the current cursor position and move the cursor to the new position. and then after we type , the new text go to the new position actual result- IME does not commit, cursor do move to the new position. But then any new typing go to the origional places. This is the same as 12090, but because we want to trace the fix platform by platform, we split them into 3 bugs. Please don't mark them dup.
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Whiteboard: finish date- done
Target Milestone: M12
Whiteboard: finish date- done → [PDT+]finish date- done
put in [PDT+] by myself because it is split from [PDT+] bug 12090 I think I fix all Mac problem, but in case not, please reopen this ONLY for Mac specific problem. (if you can reproduce that on mac)
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
I tested this in 112208 Mac build. IME will force to commit if you click on some other place inside Composer. Other place means Bold, Italic, Underline or other buttons in the toolbar. However, after you type some Japanese characters, select menu Edit|Find.. in Composer, IME does not force to commit the Japanese. Also, after you type some Japanese characters in Composer, if you change forcus to Browser, IME will not force to commit the Japanese. I need to reopen this.
Whiteboard: [PDT+]finish date- done → [PDT+]finish date- 12/10
Whiteboard: [PDT+]finish date- 12/10 → [PDT-]finish date- 12/10
This now a pdt- as written (per bobj). May need to open a new bug here.
Whiteboard: [PDT-]finish date- 12/10 → [PDT-]finish date- done- have code in my tree. reviewed by erik
can I check it in ?
Status: REOPENED → ASSIGNED
Whiteboard: [PDT-]finish date- done- have code in my tree. reviewed by erik → done- have code in my tree. reviewed by erik and pinkerton
Please reconsider this as PDT+. Without this fix, Mac IME look very strange. User will go into strange state if they click before commit the IME. Erik, pinterton and pierre have reviewed the code.
Whiteboard: done- have code in my tree. reviewed by erik and pinkerton → [PDT-]done- have code in my tree. reviewed by erik and pinkerton
Keeping PDT-. But YES Check in in!! for M12 per chofmann :-)
Status: ASSIGNED → RESOLVED
Closed: 26 years ago26 years ago
Resolution: --- → FIXED
Status: RESOLVED → REOPENED
This still happens in 12-14-08 Mac build.
Resolution: FIXED → ---
Clearing FIXED resolution due to reopen.
Status: REOPENED → RESOLVED
Closed: 26 years ago26 years ago
Resolution: --- → FIXED
I will mark this as Fixed since IME committment behavior is not consistant in all platforms. This behavior is OK for dogfood. After we agree about IME committment spec, I will write the different bug.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.