fix bug 19358. r=erik,pierre,pinkerton. Move the support of nsIKBStateControl from nsMacWindow to nsWindow. Remove unnecessary ResetInputState in mouse click. That is already been replaced by xp code. Clean up casting compilation error after change the class hier.